# precisionBOM

./: .env  .env.example  .gitignore  Makefile  README.md  drizzle.config.ts  package-lock.json  package.json  render.yaml  tailwind.config.ts
python-agent/: .env.example  .gitignore  CLAUDE.md  README.md  alembic.ini  docker-compose.yml  project_intake.yaml  pyproject.toml  sample_bom.csv
python-agent/alembic/: env.py
python-agent/alembic/versions/: 0757229302c7_initial_schema.py  add_multi_tenant_auth.py  add_x402_wallet_address.py
python-agent/data/: org_knowledge.db  projects.db
python-agent/data/agent_memory/: long_term.db
python-agent/demo/: DEMO_WALKTHROUGH.md  neurolink_bom.csv  neurolink_intake.yaml  quick_demo_bom.csv  quick_demo_intake.yaml  run_demo.py  run_demo.sh  test_small_bom.csv  test_small_intake.yaml
python-agent/docs/: API_DOCUMENTATION.md  DESIGN.md  HITL_DESIGN.md
python-agent/docs/journal/: 2025-01-10-batch-processing.md  2025-01-10-demo-script.md  2025-01-10-initial-implementation.md  2025-01-11-parallel-agents-final-decision.md  2025-01-11-watch-mode-knowledge-logging.md  2026-01-11-multi-tenant-auth.md  2026-01-11-openai-performance-optimization.md  2026-01-11-postgres-test-fixes.md  INDEX.md
python-agent/scripts/: run_e2e_tests.py  seed_demo_data.py
python-agent/tests/: TESTING_JOURNAL.md  TEST_CASES.md  conftest.py  test_auth.py  test_chat_completions.py  test_error_handling.py  test_health.py  test_knowledge_parts.py  test_knowledge_suppliers.py  test_projects_crud.py  test_upload_and_process.py  test_x402_payment.py
(+206 files in other folders)
